# davinci-free-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EDIT_PLANNING.md  LIVE_BOOTSTRAP_AUTOMATION.md  README.ru.md  REFERENCES.md  RISKS_AND_ASSUMPTIONS.md  ROADMAP.md  RUNNING.md  TOOLS.md  TROUBLESHOOTING.md
scripts/: dev_agent_external_run.ps1  dev_agent_live_run.ps1  dev_agent_project_start.ps1  dev_container_logs.ps1  dev_diagnostics.ps1  dev_down.ps1  dev_external_scripting_diagnostics.ps1  dev_install_executor.ps1  dev_kill_davinci.ps1  dev_launch_executor_ui.ps1  dev_logs.ps1  dev_reset_runtime.ps1  dev_smoke.ps1  dev_smoke_live.ps1  dev_start_resolve_with_python.ps1  dev_status.ps1  dev_uninstall_executor.ps1  dev_up.ps1  dev_who_owns_lock.ps1  resolve_executor_bootstrap.py
src/davinci_free_mcp/: __init__.py
src/davinci_free_mcp/backend/: __init__.py  diagnostics.py  executor_status.py  media_analysis.py  service.py
src/davinci_free_mcp/bridge/: __init__.py  base.py  file_queue.py  local_http.py
src/davinci_free_mcp/config/: __init__.py  settings.py
src/davinci_free_mcp/contracts/: __init__.py  models.py
src/davinci_free_mcp/external_agent/: __init__.py  bootstrap_ui.py  live_run.py  (+3 more)
tests/backend/: test_service.py
tests/bridge/: test_file_queue_bridge.py  test_local_http_bridge.py
tests/contracts/: test_models.py
tests/external_agent/: test_bootstrap_ui.py  test_live_run.py  test_runner.py  test_startup.py
tests/integration/: test_executor_status.py  test_resolve_health_flow.py  test_server_smoke.py
(+9 files in other folders)
