[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "davinci-free-mcp"
version = "0.1.0"
description = "MCP-first backend skeleton for DaVinci Resolve Free."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
davinci-free-mcp = "davinci_free_mcp.server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/davinci_free_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
